Minor fixes wit the new tab pane component. Began working on fixing a stack overflow exception being thrown when using certain characters in Regex patterns. This results in the SyntaxHighlighter to work improperly. I believe it is caused by the ' and " characters used in the patterns.

--- a/src/main/resources/css/Default.css
+++ b/src/main/resources/css/Default.css
@@ -164,6 +164,10 @@
  *                                                                             *
  ******************************************************************************/
 
+.mui-tab-pane
+{
+    -fx-effect: dropshadow(three-pass-box, grey, 10, 0, 0, 2);
+}
 .mui-tab
 {
     -fx-background-color: transparent;
